Add button for file select in center

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
           </ul>
         </div>
       </nav>
+
+      <div id="content" class="row mx-auto justify-content-center align-items-center">
+        <div class="load-file col-6 mx-auto">
+          <div class="load-text">
+            No items.dat file selected!
+          </div>
+          <button type="button" class="load-btn btn btn-outline-primary btn-lg btn-block" onclick="getFile()">Select file...</button>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
