--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./index.js"></script>
+    <script src="./itemutils/utils.js"></script>
   </body>
 </html>
