--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="./index.js"></script>
     <script src="./itemutils/utils.js"></script>
   </body>
