Remove unnecessary classes for content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </nav>
 
-      <div id="content" class="row mx-auto justify-content-center align-items-center">
+      <div id="content">
         <div class="load-file col-6 mx-auto">
           <div class="load-text">
             No items.dat file selected!
