--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
